--- a/Curriculum.html
+++ b/Curriculum.html
@@ -38,13 +38,13 @@
         <h2>Dados Pessoais</h2>
         <img id="profile-image" src=https://imgs.search.brave.com/GkAIuY4uQSRlbLRd1mseDZNRj6Bx_rQEz2b-y_8gaf8/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pLnBp/bmltZy5jb20vb3Jp/Z2luYWxzLzJmLzE1/L2YyLzJmMTVmMmU4/YzY4OGIzMTIwZDNk/MjY0NjdiMDYzMzBj/LmpwZw alt="Foto de Perfil">
         <p>Nome: Vitor Emanuel</p>
-        <p>E-mail: sr.vitoremanuel@gmail.com</p>
+        <p>E-mail: test.ando@gmail.com</p>
         <p>Telefone: (77) 99999-9999</p>
 
         <h2>Experiência Profissional</h2>
-        <p>Cargo: Call Center</p>
+        <p>Cargo: Apicultura</p>
         <p>Empresa: Hospital Santa Luzia</p>
-        <p>Descrição: Atendimento online: Orçamento de exames, Agendamento de Consultas e esclarecimento de dúvidas dos pacientes.</p>
+        <p>Descrição: Criação de abelhas bubble Brasileiras, coleta de Mel.</p>
 
         <h2>Formação Acadêmica</h2>
         <p>Curso: Cursando Análise e Desinvolvimento de Sistemas</p>
